--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -43,5 +43,5 @@ jobs:
           git commit *.txt -m "Add generated file"
           git commit *.m3u -m "Add generated file"
           #git pull --rebase
-          git push -f
+          git push 
 
