--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -42,6 +42,6 @@ jobs:
           git add .
           git commit *.txt -m "Add generated file"
           git commit *.m3u -m "Add generated file"
-          #git pull --rebase
+          git pull --rebase
           git push -f
 
