--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -37,6 +37,8 @@ jobs:
         
       - name: 提交更改
         run: |
+
+          git push origin
           git config --local user.email "dwc1119@163.com"
           git config --local user.name "dwc1119"
           git add .
