--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -38,8 +38,8 @@ jobs:
       - name: 提交更改
         run: |
 
+          git pull origin
           git push origin
-          git fetch origin
           git config --local user.email "dwc1119@163.com"
           git config --local user.name "dwc1119"
           git add .
