--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -38,8 +38,8 @@ jobs:
       - name: 提交更改
         run: |
 
-          git config --local user.email "ssili@126.com"
-          git config --local user.name "ssili126"
+          git config --local user.email "dwc1119@163.com"
+          git config --local user.name "dwc1119"
           git add .
           git commit *.txt -m "Add generated file"
           git commit *.m3u -m "Add generated file"
