--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,11 +26,11 @@ jobs:
      # - name: Run itv_allm
        # run: python ${{ github.workspace }}/itv_allm.py
 
-      - name: Run a
-        run: python ${{ github.workspace }}/a.py
+      #- name: Run a
+       # run: python ${{ github.workspace }}/a.py
         
-      #- name: Run b
-        #run: python ${{ github.workspace }}/b.py
+      - name: Run b
+        run: python ${{ github.workspace }}/b.py
         
       #- name: Run qita
         #run: python ${{ github.workspace }}/qita.py
