--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Run b
         run: python ${{ github.workspace }}/b.py
         
-      #- name: Run qita
-        #run: python ${{ github.workspace }}/qita.py
+      - name: Run c
+        run: python ${{ github.workspace }}/c.py
         
       - name: 提交更改
         run: |
