--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,11 +1,11 @@
-#name: itv
+name: itv
 
-#on:
-  #schedule:
-   # - cron: '0 9,21 * * *'
-  #push:
-   # branches:
-     # - cc
+on:
+  schedule:
+    - cron: '0 9,21 * * *'
+  push:
+    branches:
+      - cc
 
 jobs:
   build:
@@ -26,13 +26,16 @@ jobs:
      # - name: Run itv_allm
        # run: python ${{ github.workspace }}/itv_allm.py
 
-      - name: Run a
-        run: python ${{ github.workspace }}/a.py
+      #- name: Run a
+       # run: python ${{ github.workspace }}/a.py
         
-      - name: Run b
-        run: python ${{ github.workspace }}/b.py
+      #- name: Run b
+      #  run: python ${{ github.workspace }}/b.py
         
-      - name: Run c
+      #- name: Run c
+      #  run: python ${{ github.workspace }}/c.py
+
+      - name: Run d
         run: python ${{ github.workspace }}/c.py
         
       - name: 提交更改
