--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -35,8 +35,8 @@ jobs:
       #- name: Run c
       #  run: python ${{ github.workspace }}/c.py
 
-      - name: Run d
-        run: python ${{ github.workspace }}/d.py
+      - name: Run e
+        run: python ${{ github.workspace }}/e.py
         
       - name: 提交更改
         run: |
