--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,8 +26,8 @@ jobs:
      # - name: Run itv_allm
        # run: python ${{ github.workspace }}/itv_allm.py
 
-      - name: Run a
-        run: python ${{ github.workspace }}/a.py
+      - name: Run e
+        run: python ${{ github.workspace }}/e.py
         
       #- name: Run b
       #  run: python ${{ github.workspace }}/b.py
