--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,8 +26,8 @@ jobs:
       #- name: Run a
        # run: python ${{ github.workspace }}/a.py
 
-      - name: Run a.py
-        run: python ${{ github.workspace }}/a.py
+      - name: Run i.py
+        run: python ${{ github.workspace }}/i.py
         
       #- name: Run b
       #  run: python ${{ github.workspace }}/b.py
