--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,7 +26,7 @@ jobs:
       #- name: Run a
        # run: python ${{ github.workspace }}/a.py
 
-      - name: Run iptv6.py
+      - name: Run itv.py
         run: python ${{ github.workspace }}/iptv6.py
         
       #- name: Run b
