--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -45,8 +45,8 @@ jobs:
       #- name: Run a
        # run: python ${{ github.workspace }}/a.py
 
-      - name: Run i.py
-        run: python ${{ github.workspace }}/i.py
+      - name: Run f.py
+        run: python ${{ github.workspace }}/f.py
         
       #- name: Run b
       #  run: python ${{ github.workspace }}/b.py
